# Gofa

./: CMakeLists.txt  README.md  package.xml
config/: CMakeLists.txt  (+5 more)
gofa_viz/: CMakeLists.txt  config.rviz  package.xml  setup.cfg  setup.py  setup.py.bak  sim.rviz
gofa_viz/config/: ros2_controllers.yaml
gofa_viz/gofa_moveit_config/launch/: moveit_planning_execution.launch.py
gofa_viz/gofa_moveit_config_gofa/launch/: moveit_planning_execution.launch.py
gofa_viz/gofa_viz/carrier_meshes/: carrier_3.STL  carrier_6.STL  robot_gripper_with_cathode_v3.stp - robot_gripper_with_cathode_v2.stp-1 FWR50L-00-B(0).stp-1 121888A.stp-1.STL  robot_gripper_with_cathode_v3.stp - robot_gripper_with_cathode_v2.stp-1 FWR50L-00-B(0).stp-1 121888B.stp-1.STL  robot_gripper_with_cathode_v3.stp - robot_gripper_with_cathode_v2.stp-1 FWR50L-00-B(0).stp-1 143760.stp-1.STL  robot_gripper_with_cathode_v3.stp - robot_gripper_with_cathode_v2.stp-1 FWR50L-00-B(0).stp-1 143760.stp-2.STL  robot_gripper_with_cathode_v3.stp - robot_gripper_with_cathode_v2.stp-1 FWR50L-00-B(0).stp-1 CDST00180.stp-1.STL  robot_gripper_with_cathode_v3.stp - robot_gripper_with_cathode_v2.stp-1 FWR50L-00-B(0).stp-1 CDST00180.stp-2.STL  (+15 more)
gofa_viz/launch/: display_gofa.launch.py  display_gofa.launch.py.bak  display_gofa_with_tanks.launch.py  moveit_planning_execution.launch.py  view_gofa_carrier.launch.py
gofa_viz/meshes/: CRB15000_10kg-152_Omnicore_rev00_LINK06_CAD.stl
gofa_viz/scripts/: check_moveit_groups.py  move_carrier_to_tank.py  move_to_tank0.py
gofa_viz/urdf/: carrier.urdf  gofa_with_carrier_backup.urdf
(+68 files in other folders)
