<?xml version="1.0"?>
<package format="3">
  <name>gofa_viz</name>
  <version>0.0.1</version>
  <description>Visualization package for GoFa robot</description>

  <maintainer email="kareem.aly@tuhh.de">Kareem Aly</maintainer>
  <license>MIT</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <!-- Messages (likely used in add_tanks.py) -->
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
